--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>countryHistory</title>
-    <link rel="stylesheet" href="mycountryHistory.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
@@ -15,7 +15,7 @@
 
      
     </div>
-    <script src="mycountryHistory.js">
+    <script src="index.js">
     
     </script>
   </body>
